# galaxy-model

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
galaxy_model/: _additional_paths.py  galaxy.py
galaxy_model/spiral_arms/: local.py  norma_outer.py  perseus.py  sct_cen.py  sgr_car.py  spiral_arm_superclass.py  spiral_parameters.py  spiral_property.py  three_kpc.py
tests/: test_galaxy.py  test_plot_spiral_arms.py
