[tool.poetry]
name = "galaxy-model"
version = "0.1.0"
description = "2D Galaxy model following the description in Reid (2019)."
authors = ["K-Monty <kmgoh1995@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
descartes = "^1.1.0"
matplotlib = "3.4.3"
numpy = "1.20.3"
scipy = "1.7.1"
Shapely = "1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
