[tool.poetry]
name = "galaxy-model"
version = "0.1.0"
description = "2D Galaxy model following the description in Reid (2019)."
authors = ["K-Monty <kmgoh1995@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
descartes = "^1.1.0"
matplotlib = {version = "3.4.3", python = ">=3.7"}
numpy = {version = "1.20.3", python = ">=3.7"}
scipy = {version = "1.7.1", python = ">=3.6,<3.10"}
Shapely = {version = "1.8.0", python = "<3.10"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
